testing this way to can connect front en apps as angular to our server application living in the cluster

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     environment:
       MYSQL_USER: christian
       MYSQL_ROOT_PASSWORD: secret
-      MSYQL_PASSWORD: secret
+      MYSQL_PASSWORD: secret
     volumes:
       - dump:/var/lib/mysql
   phpmyadmin:
