--- a/kubernetes/phpmyadmin-secret.yaml
+++ b/kubernetes/phpmyadmin-secret.yaml
@@ -8,4 +8,6 @@ metadata:
 type: Opaque
 data:
   MYSQL_ROOT_PASSWORD: c2VjcmV0
-  
+  #MYSQL_DATABASE: dXN1YXJpb3M=
+  #MYSQL_USER: Y2hyaXN0aWFu
+  #MYSQL_PASSWORD: c2VjcmV0 
