--- a/kubernetes/phpmyadmin-depl.yaml
+++ b/kubernetes/phpmyadmin-depl.yaml
@@ -21,15 +21,15 @@ spec:
           ports:
             - containerPort: 80
           env:
+            - name: MYSQL_ROOT_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: phpmyadmin-secret
+                  key: MYSQL_ROOT_PASSWORD
             - name: PMA_HOST
               value: mysql-service
             - name: PMA_PORT
               value: "3306"
-            - name: MYSQL_ROOT_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: mysql-secret
-                  key: MYSQL_ROOT_PASSWORD
 ---
 apiVersion: v1
 kind: Service
